# OBS-Auto-Framing

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  buildspec.json
cmake/: compilerconfig.cmake  defaults.cmake  helpers.cmake
cmake/common/: bootstrap.cmake
data/effects/: crop.effect
data/locale/: en-US.ini
docs/: install.md  release_checklist.md  release_layout.md  runtime_test_plan.md  troubleshooting.md
docs/release_notes/: v0.1.0.md  v0.1.1.md
scripts/: activate_project_env.ps1  build.ps1  download_onnxruntime.ps1  download_yolox_model.ps1  import_obs_dev_files.ps1  install_to_obs.ps1  launch_obs_runtime.ps1  package_release.ps1  project_shell.cmd  publish_release.ps1  start_clean_project_shell.ps1
src/: auto-framing-filter.cpp  crop_controller.cpp  crop_controller.hpp  crop_renderer.cpp  crop_renderer.hpp  detector.hpp  geometry.hpp  iou_tracker.cpp  letterbox.hpp  mock_detector.cpp  onnx_person_detector.cpp  onnx_person_detector.hpp  plugin-main.cpp  settings.hpp  tracker.hpp  yolox_postprocess.cpp  yolox_postprocess.hpp  yuv.hpp
src/tracker/: assignment.cpp  assignment.hpp  bytetrack_tracker.cpp  bytetrack_tracker.hpp
tests/: bytetrack_tracker_tests.cpp  crop_controller_tests.cpp  yolox_postprocess_tests.cpp  yuv_tests.cpp
